# Computer_Graphics_Reference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh
shaders/: gradient.comp
src/: main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
